# phiacta

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cloudflared/: config.yml
docker/: forgejo-entrypoint.sh  forgejo-init.sh
docs/design/: architecture-git-backed-claims.md  devils-advocate.md  extension-design.md  prior-art.md  schema-proposal.md  synthesis.md
docs/implementation/: api-design.md  architecture.md  deployment.md  extension-protocol.md
scripts/: entrypoint.prod.sh  seed.py  update_claims_latex.py  verify_demo.py
src/newpublishing/: config.py  main.py
src/newpublishing/db/: session.py
src/newpublishing/layers/: __init__.py  base.py  registry.py
src/newpublishing/models/: __init__.py  agent.py  artifact.py  base.py  bundle.py  claim.py  edge.py  layer_registry.py  namespace.py  pending_reference.py  provenance.py  relation.py  review.py  source.py
src/newpublishing/repositories/: __init__.py  agent_repository.py  base.py  bundle_repository.py  claim_repository.py  edge_repository.py  relation_repository.py  source_repository.py
src/phiacta/: config.py  main.py
src/phiacta/api/: agents.py  auth.py  bundles.py  claims.py  extensions.py  interactions.py  namespaces.py  references.py  relations.py  (+4 more)
tests/: conftest.py
tests/integration/: test_claim_repository.py  test_edge_repository.py  test_relation_repository.py
tests/unit/: test_layers.py  test_models.py  test_repositories.py
(+73 files in other folders)
